bootswatch theme added, django bootstrap package install, temp modified

--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load django_bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
     <meta charset="UTF-8">
     <title>Link Store</title>
 </head>
 <body>
-
-{%  block content %}
+{% block content %}
 {% endblock %}
-
 </body>
 </html>
