--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -4,14 +4,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Link Store</title>
-    
+
     {% bootstrap_css %}
     {% bootstrap_javascript %}
-    
+
 </head>
-<body>
+
 {% block content %}
 {% endblock %}
-</body>
+
 </html>
