--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -1,4 +1,5 @@
 {% load django_bootstrap5 %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,13 +7,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Link Store</title>
-
     {% bootstrap_css %}
     {% bootstrap_javascript %}
-
 </head>
+<img src="{% static 'store/landing_bg.jpg' %}" class="img-fluid" alt="landing-page-bg">
+<div class="container-fluid
+position-absolute top-50 start-50 translate-middle"
+>
+    <div class="position-absolute top-50 start-50 translate-middle
+    p-3 mb-2 bg-light text-dark
+    shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+        {% block content %}
+        {% endblock %}
 
-{% block content %}
-{% endblock %}
-
+    </div>
+</div>
 </html>
