hell ya! logic rocks, used my login html with django

--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -8,10 +8,25 @@
     {% endif %}
     <form method="post" action="{% url 'users:login' %}">
         {% csrf_token %}
-        {{ form.as_p }}
 
-        <button name="submit" class="btn btn-primary btn-sm">Log in</button>
-        <input type="hidden" name="next" value="{% url 'store:home' %}"/>
+        <div class="grid gap-0 row-gap-3">
+            <div>
+                <label for="for_username" class="form-label mt-4">Username</label>
+                <input type="text" name="username" class="form-control" id="for_username"
+                       placeholder="Username">
+            </div>
+            <div>
+                <label for="for_password" class="form-label mt-4">Password</label>
+                <input type="password" name="password" class="form-control" id="for_password" placeholder="Password"
+                       autocomplete="off">
+            </div>
 
+            <div class="p-2 g-col-6">
+                <button name="submit" class="btn btn-primary btn-sm">Log in</button>
+                <input type="hidden" name="next" value="{% url 'store:home' %}"/>
+
+
+            </div>
+        </div>
     </form>
 {% endblock content %}
