--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     {% if form.errors %}
-        <p>Incorrect credentials. Please try again.</p>
+        <p class="text-warning">Incorrect credentials</p>
     {% endif %}
     <form method="post" action="{% url 'users:login' %}">
         {% csrf_token %}
