bug fix for home rename in login, nav bar added to store template

--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -31,7 +31,7 @@ position-absolute top-50 start-50 translate-middle"
 
                     <div class="p-2 g-col-6">
                         <button name="submit" class="btn btn-primary btn-sm">Log in</button>
-                        <input type="hidden" name="next" value="{% url 'store:home' %}"/>
+                        <input type="hidden" name="next" value="{% url 'store:store' %}"/>
 
 
                     </div>
