--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -3,15 +3,11 @@
 {% block content %}
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
-                    aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Store
-                            <span class="visually-hidden">(current)</span>
+                           
                         </a>
                     </li>
                     <li class="nav-item">
@@ -21,11 +17,12 @@
                         <a class="nav-link" href="#">Tags</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <label for="for_search"></label>
-                    <input class="form-control me-sm-2" type="search" id="for_search" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                </form>
+                <div>
+                    <ul class="navbar-nav me-auto">
+                        <li><a class="nav-link" href="#">Profile</a></li>
+                        <li ><a class="nav-link" href="#">Logout</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
