--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -6,7 +6,7 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Store
+                        <a class="nav-link active" href="{% url 'store:links' %}">Store
 
                         </a>
                     </li>
