--- a/store/templates/store/topics.html
+++ b/store/templates/store/topics.html
@@ -1,4 +1,5 @@
-{% extends 'store/base.html' %}
-
-{% block content %}
+{% extends 'store/pages.html' %}
+{% load static %}
+{% block pages_content %}
+    <h2>Topics</h2>
 {% endblock %}
