main page links tab rename

--- a/store/templates/store/pages.html
+++ b/store/templates/store/pages.html
@@ -8,7 +8,7 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link {% if 'links' in request.path %}active{% endif %}"
-                           href="{% url 'store:links' %}">Store
+                           href="{% url 'store:links' %}">Links
                         </a>
                     </li>
                     <li class="nav-item">
