list temp base, 3 pages, data loaded, major

--- a/store/templates/store/tag_list.html
+++ b/store/templates/store/tag_list.html
@@ -1,4 +1,4 @@
-{% extends 'store/pages.html' %}
+{% extends 'store/base_list.html' %}
 {% load static %}
 {% block pages_content %}
     <h2>Tags</h2>
