--- a/store/templates/store/base_list.html
+++ b/store/templates/store/base_list.html
@@ -34,7 +34,11 @@
             </div>
         </div>
     </nav>
-    {% block pages_content %}
+    <div class="container-fluid">
+    <table class="table table-hover table-borderless">
+    {% block content_list %}
     {% endblock %}
+    </table>
+    </div>
 {% endblock %}
 
