--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -1,5 +1,34 @@
-{% extends 'store/pages.html' %}
+{% extends 'store/base_list.html' %}
 {% load static %}
-{% block pages_content %}
-    <h2>Links</h2>
+{% block content_list %}
+    <thead class="h6">
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Title</th>
+        <th scope="col">Topic</th>
+        <th scope="col">Date Saved</th>
+        <th scope="col">Type</th>
+        <th scope="col">Read</th>
+        <th scope="col">Marked</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for link in link_list %}
+        <tr>
+            <th scope="row">{{ forloop.counter }}</th>
+            <td><a href="{{ link.url }}" target="_blank">{{ link.title }}</a></td>
+            <td>{{ link.topic }}</td>
+            <td>{{ link.save_date }}</td>
+            <td>{{ link.type }}</td>
+            <td>
+                <input type="checkbox" id="has_been_read" {{ link.has_been_read }} />
+                <label for="has_been_read">read</label>
+            </td>
+            <td>
+                <input type="checkbox" id="is_starred" {{ link.is_starred }} />
+                <label for="is_starred">marked</label>
+            </td>
+        </tr>
+    {% endfor %}
+    </tbody>
 {% endblock %}
