--- a/store/templates/store/topic_list.html
+++ b/store/templates/store/topic_list.html
@@ -1,5 +1,20 @@
-{% extends 'store/pages.html' %}
+{% extends 'store/base_list.html' %}
 {% load static %}
-{% block pages_content %}
-    <h2>Topics</h2>
+{% block content_list %}
+    <thead class="h6">
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name</th>
+        <th scope="col">Date Created</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for topic in topic_list %}
+        <tr>
+            <th scope="row">{{ forloop.counter }}</th>
+            <td>{{ topic.name }}</td>
+            <td>{{ topic.creation_date }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
 {% endblock %}
