--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -6,7 +6,7 @@
         <th scope="col"><h3>#</h3></th>
         <th scope="col"><h3>Title</h3></th>
         <th scope="col"><h3>Topic</h3></th>
-        <th scope="col"><h3>Date</h3></th>
+        <th scope="col"><h3>Created</h3></th>
         <th scope="col"><h3>Type</h3></th>
         <th scope="col"><h3>Status</h3></th>
         <th scope="col"><h3>Marked</h3></th>
