--- a/store/templates/store/tag_list.html
+++ b/store/templates/store/tag_list.html
@@ -3,9 +3,9 @@
 {% block content_list %}
     <thead class="h6">
     <tr>
-        <th scope="col">#</th>
-        <th scope="col">Name</th>
-        <th scope="col">Date Created</th>
+        <th scope="col"><h2>#</h2></th>
+        <th scope="col"><h2>Tag</h2></th>
+        <th scope="col"><h2>Created</h2></th>
     </tr>
     </thead>
     <tbody>
@@ -13,7 +13,7 @@
         <tr>
             <th scope="row">{{ forloop.counter }}</th>
             <td>{{ tag.name }}</td>
-            <td>{{ tag.creation_date }}</td>
+            <td>{{ tag.creation_date|date:"d-M-y" }}</td>
         </tr>
     {% endfor %}
     </tbody>
