--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -13,7 +13,7 @@ position-absolute top-50 start-50 translate-middle"
             {% if form.errors %}
                 <p class="text-danger">Incorrect credentials</p>
             {% endif %}
-            <form method="post" action="{% url 'users:login' %}">
+            <form method="post" action="{% url 'login' %}">
                 {% csrf_token %}
 
                 <div class="grid gap-0 row-gap-3">
