--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -3,13 +3,13 @@
 {% block content_list %}
     <thead class="h6">
     <tr>
-        <th scope="col"><h3>#</h3></th>
-        <th scope="col"><h3>Title</h3></th>
-        <th scope="col"><h3>Topic</h3></th>
-        <th scope="col"><h3>Created</h3></th>
-        <th scope="col"><h3>Type</h3></th>
-        <th scope="col"><h3>Status</h3></th>
-        <th scope="col"><h3>Marked</h3></th>
+        <th scope="col"><h4>#</h4></th>
+        <th scope="col"><h4>Link</h4></th>
+        <th scope="col"><h4>Topic</h4></th>
+        <th scope="col"><h4>Created</h4></th>
+        <th scope="col"><h4>Type</h4></th>
+        <th scope="col"><h4>Status</h4></th>
+        <th scope="col"><h4>Marked</h4></th>
     </tr>
     </thead>
     <tbody>
@@ -17,9 +17,9 @@
         <tr>
             <th scope="row">{{ forloop.counter }}</th>
             <td>
-                {{ link.title }}
                 <a href="{{ link.url }}" target="_blank">
-                    <img src="{% static 'store/open_in_new_window.svg' %}" alt="open-in-new-tab"/>
+                    {{ link.title }}
+{#                    <img src="{% static 'store/open_in_new_window.svg' %}" alt="open-in-new-tab"/>#}
                 </a>
                 <a href="/admin/store/link/{{ link.id }}/change/" target="_blank">
                     <img src="{% static 'store/edit_note.svg' %}" alt="edit-link"/>
