detail template for link only added, url conf, base detail templates

--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -19,9 +19,9 @@
             <td>
                 <a href="{{ link.url }}" target="_blank">
                     {{ link.title }}
-{#                    <img src="{% static 'store/open_in_new_window.svg' %}" alt="open-in-new-tab"/>#}
                 </a>
-                <a href="/admin/store/link/{{ link.id }}/change/" target="_blank">
+                <a href="{{ link.id }}/link" target="_blank">
+{#                <a href="/admin/store/link/{{ link.id }}/change/" target="_blank">#}
                     <img src="{% static 'store/edit_note.svg' %}" alt="edit-link"/>
                 </a>
 
