--- a/store/templates/store/link_detail.html
+++ b/store/templates/store/link_detail.html
@@ -1,6 +1,6 @@
-{% extends 'store/base.html' %}
+{% extends 'store/base_detail.html' %}
 {% load static %}
 
-{% block content %}
+{% block content_detail %}
     {{ link }}
 {% endblock %}
