issue with url fix

--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -20,8 +20,8 @@
                 <a href="{{ link.url }}" target="_blank">
                     {{ link.title }}
                 </a>
-                <a href="{{ link.id }}/link" target="_blank">
-{#                <a href="/admin/store/link/{{ link.id }}/change/" target="_blank">#}
+                <a href="{{ link.id }}/" target="_blank">
+                    {#                <a href="/admin/store/link/{{ link.id }}/change/" target="_blank">#}
                     <img src="{% static 'store/edit_note.svg' %}" alt="edit-link"/>
                 </a>
 
