--- a/store/templates/store/base_detail.html
+++ b/store/templates/store/base_detail.html
@@ -6,13 +6,7 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-
-                        {#                        <a class="nav-link {% if 'links' in request.path %}active{% endif %}"#}
-                        {#                           href="{% url 'store:links' %}">Links#}
-                        {#                        </a>#}
-
-                    </li>
+                    <li class="nav-item"></li>
                 </ul>
                 <div>
                     <ul class="navbar-nav me-auto">
@@ -29,8 +23,8 @@
         </div>
     </nav>
     <div class="container-fluid">
-    {% block content_detail %}
-            {% endblock %}
+        {% block content_detail %}
+        {% endblock %}
     </div>
 {% endblock %}
 
