--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -21,7 +21,7 @@
                     {{ link.title }}
                 </a>
                 <a href="{{ link.id }}/" target="_blank">
-                    <img src="{% static 'store/edit_note.svg' %}" alt="edit-link"/>
+                    <img src="{% static 'store/img/edit_note.svg' %}" alt="edit-link"/>
                 </a>
 
             </td>
