--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-    <img src="{% static 'store/landing_bg.jpg' %}" class="img-fluid" alt="landing-page-bg">
+    <img src="{% static 'store/img/landing_bg.jpg' %}" class="img-fluid" alt="landing-page-bg">
     <div class="container-fluid
     position-absolute top-50 start-50 translate-middle"
     >
