users app login logout url fix

--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -10,7 +10,7 @@
         p-3 mb-2 bg-light text-dark
         shadow-lg p-3 mb-5 bg-body-tertiary rounded">
             <p class="text-info-emphasis">You have been logged out. Thank you for visiting!</p>
-            <a href="{% url 'login' %}" class="btn btn-primary btn-sm">Re-Login</a>
+            <a href="{% url 'users:login' %}" class="btn btn-primary btn-sm">Re-Login</a>
         </div>
     </div>
 
