--- a/store/templates/store/landing.html
+++ b/store/templates/store/landing.html
@@ -13,8 +13,8 @@
             <p class="lead"><em>A central place for storing and managing links to your most interesting and important
                 webpages</em></p>
 
-            <a href="{% url 'login' %}" class="btn btn-primary btn-lg">Login</a>
-            <a href="{% url 'login' %}" class="btn btn-primary btn-lg">Register</a>
+            <a href="{% url 'users:login' %}" class="btn btn-primary btn-lg">Login</a>
+            <a href="{% url 'users:login' %}" class="btn btn-primary btn-lg">Register</a>
         </div>
     </div>
 
