--- a/store/templates/store/landing.html
+++ b/store/templates/store/landing.html
@@ -14,7 +14,7 @@
                 webpages</em></p>
 
             <a href="{% url 'users:login' %}" class="btn btn-primary btn-lg">Login</a>
-            <a href="{% url 'users:login' %}" class="btn btn-primary btn-lg">Register</a>
+            <a href="{% url 'users:register' %}" class="btn btn-primary btn-lg">Register</a>
         </div>
     </div>
 
