added user name to profile button links list

--- a/store/templates/store/base_list.html
+++ b/store/templates/store/base_list.html
@@ -22,7 +22,7 @@
                 </ul>
                 <div>
                     <ul class="navbar-nav me-auto">
-                        <li><a class="nav-link" href="#">Profile</a></li>
+                        <li><a class="nav-link" href="#">Profile | {{ user }}</a></li>
                         <li>
                             <form method="post" action="{% url 'users:logout' %}">
                                 {% csrf_token %}
