--- a/store/templates/store/base_list.html
+++ b/store/templates/store/base_list.html
@@ -19,6 +19,25 @@
                         <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
                            href="{% url 'store:tags' %}">Tags</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
+                           href="{% url 'store:tags' %}">
+                            <img src="{% static 'store/img/add_new.svg' %}"
+                                 alt="add-link"/>
+                            New Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
+                           href="{% url 'store:tags' %}">
+                            <img src="{% static 'store/img/add_new.svg' %}" alt="add-topic"/>
+                            New Topic</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
+                           href="{% url 'store:tags' %}">
+                            <img src="{% static 'store/img/add_new.svg' %}" alt="add-tag"/>
+                            New Tag</a>
+                    </li>
                 </ul>
                 <div>
                     <ul class="navbar-nav me-auto">
