--- a/store/templates/store/tag_list.html
+++ b/store/templates/store/tag_list.html
@@ -12,7 +12,10 @@
     {% for tag in tag_list %}
         <tr>
             <th scope="row">{{ forloop.counter }}</th>
-            <td>{{ tag.name }}</td>
+            <td>{{ tag.name }}
+                            <a href="{{ tag.id }}/" target="_blank">
+                    <img src="{% static 'store/img/edit_note.svg' %}" alt="edit-link"/>
+                </a></td>
             <td>{{ tag.creation_date|date:"d-M-y" }}</td>
         </tr>
     {% endfor %}
