edit icon changed

--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -23,7 +23,7 @@
                     {{ link.title }}
                 </a>
                 <a href="{{ link.id }}/" target="_blank">
-                    <img src="{% static 'store/img/edit_note.svg' %}" alt="edit-link"/>
+                    <img src="{% static 'store/img/edit_icon.svg' %}" alt="edit-link"/>
                 </a>
 
             </td>
