--- a/store/templates/store/tag_list.html
+++ b/store/templates/store/tag_list.html
@@ -14,7 +14,7 @@
             <th scope="row">{{ forloop.counter }}</th>
             <td>{{ tag.name }}
                             <a href="{{ tag.id }}/" target="_blank">
-                    <img src="{% static 'store/img/edit_note.svg' %}" alt="edit-link"/>
+                    <img src="{% static 'store/img/edit_icon.svg' %}" alt="edit-link"/>
                 </a></td>
             <td>{{ tag.creation_date|date:"d-M-y" }}</td>
         </tr>
