--- a/store/templates/store/link_list.html
+++ b/store/templates/store/link_list.html
@@ -8,7 +8,7 @@
         <th scope="col"><h4>#</h4></th>
         <th scope="col"><h4>Link</h4></th>
         <th scope="col"><h4>Topic</h4></th>
-        <th scope="col"><h4>Created</h4></th>
+        <th scope="col"><h4>Saved</h4></th>
         <th scope="col"><h4>Type</h4></th>
         <th scope="col"><h4>Read</h4></th>
         <th scope="col"><h4>Marked</h4></th>
@@ -28,7 +28,7 @@
 
             </td>
             <td>{{ link.topic }}</td>
-            <td>{{ link.save_date|date:"d-M-y" }}</td>
+            <td>{{ link.saved_on|date:"d-M-y" }}</td>
             <td>{{ link.type }}</td>
             <td>
                 <input type="checkbox"
