--- a/store/templates/store/base_detail.html
+++ b/store/templates/store/base_detail.html
@@ -6,11 +6,42 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"></li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'links' in request.path %}active{% endif %}"
+                           href="{% url 'store:links' %}">Links
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'topics' in request.path %}active{% endif %}"
+                           href="{% url 'store:topics' %}">Topics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
+                           href="{% url 'store:tags' %}">Tags</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
+                           href="{% url 'store:tags' %}">
+                            <img src="{% static 'store/img/add_new.svg' %}"
+                                 alt="add-link"/>
+                            New Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
+                           href="{% url 'store:tags' %}">
+                            <img src="{% static 'store/img/add_new.svg' %}" alt="add-topic"/>
+                            New Topic</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
+                           href="{% url 'store:tags' %}">
+                            <img src="{% static 'store/img/add_new.svg' %}" alt="add-tag"/>
+                            New Tag</a>
+                    </li>
                 </ul>
                 <div>
                     <ul class="navbar-nav me-auto">
-                        <li><a class="nav-link" href="#">Profile</a></li>
+                        <li><a class="nav-link" href="#">Profile | {{ user }}</a></li>
                         <li>
                             <form method="post" action="{% url 'users:logout' %}">
                                 {% csrf_token %}
@@ -22,9 +53,8 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
-        {% block content_detail %}
-        {% endblock %}
-    </div>
+    {% block content_detail %}
+    {% endblock %}
 {% endblock %}
+
 
