--- a/store/templates/store/base_detail.html
+++ b/store/templates/store/base_detail.html
@@ -2,39 +2,46 @@
 {% load static %}
 
 {% block content %}
+    {% url 'store:links' as links %}
+    {% url 'store:topics' as topics %}
+    {% url 'store:tags' as tags %}
+    {% url 'store:link-add' as add_link %}
+    {% url 'store:topic-add' as add_topic %}
+    {% url 'store:tag-add' as add_tag %}
+    
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link {% if 'links' in request.path %}active{% endif %}"
-                           href="{% url 'store:links' %}">Links
+                        <a class="nav-link {% if request.path == links %}active{% endif %}"
+                           href="{{ links }}">Links
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if 'topics' in request.path %}active{% endif %}"
-                           href="{% url 'store:topics' %}">Topics</a>
+                        <a class="nav-link {% if request.path == topics %}active{% endif %}"
+                           href="{{ topics }}">Topics</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
-                           href="{% url 'store:tags' %}">Tags</a>
+                        <a class="nav-link {% if request.path == tags %}active{% endif %}"
+                           href="{{ tags }}">Tags</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
-                           href="{% url 'store:link-add' %}">
+                        <a class="nav-link {% if  request.path == add_link %}active{% endif %}"
+                           href="{{ add_link }}">
                             <img src="{% static 'store/img/add_new.svg' %}"
                                  alt="add-link"/>
                             New Link</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
-                           href="{% url 'store:topic-add' %}">
+                        <a class="nav-link {% if request.path == add_topic %}active{% endif %}"
+                           href="{{ add_topic }}">
                             <img src="{% static 'store/img/add_new.svg' %}" alt="add-topic"/>
                             New Topic</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if 'tags' in request.path %}active{% endif %}"
-                           href="{% url 'store:tag-add' %}">
+                        <a class="nav-link {% if request.path == add_tag %}active{% endif %}"
+                           href="{{ add_tag }}">
                             <img src="{% static 'store/img/add_new.svg' %}" alt="add-tag"/>
                             New Tag</a>
                     </li>
