--- a/store/templates/store/link_detail.html
+++ b/store/templates/store/link_detail.html
@@ -1,7 +1,7 @@
-{% extends 'store/base_detail.html' %}
+{% extends 'store/base_views.html' %}
 {% load static %}
 
-{% block content_detail %}
+{% block view_content %}
     <div class="container-fluid">
         <h3 class="p-3 m-3"> Edit Link </h3>
         <form method="post" class="m-4">
