--- a/store/templates/store/base_views.html
+++ b/store/templates/store/base_views.html
@@ -8,7 +8,7 @@
     {% url 'store:link-add' as add_link %}
     {% url 'store:topic-add' as add_topic %}
     {% url 'store:tag-add' as add_tag %}
-    
+
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarColor01">
@@ -60,8 +60,9 @@
             </div>
         </div>
     </nav>
-    {% block content_detail %}
+    s
+    {% block view_content %}
     {% endblock %}
-{% endblock %}
 
+{% endblock %}
 
