--- a/store/templates/store/base_view.html
+++ b/store/templates/store/base_view.html
@@ -52,7 +52,7 @@
                         <li>
                             <form method="post" action="{% url 'users:logout' %}">
                                 {% csrf_token %}
-                                <button type="submit" class="btn btn-link">Logout</button>
+                                <button type="submit" class="nav-link">LOGOUT</button>
                             </form>
                         </li>
                     </ul>
